--- a/CheckExchangeRate/CheckExchangeRate/Modules/CurrencyList/View/CurrencyList.storyboard
+++ b/CheckExchangeRate/CheckExchangeRate/Modules/CurrencyList/View/CurrencyList.storyboard
@@ -15,34 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z9t-UJ-Uq9">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z9t-UJ-Uq9">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Seelct Currency" id="kgW-tM-Zt2">
                                         <barButtonItem key="backBarButtonItem" title="Close" style="plain" id="JTU-bw-8sP"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lbw-4L-Fg0">
-                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I0i-Zf-s0a">
-                                <rect key="frame" x="0.0" y="132" width="414" height="739"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I0i-Zf-s0a">
+                                <rect key="frame" x="0.0" y="100" width="414" height="796"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" textLabel="dPF-lI-QdK" detailTextLabel="8Vl-IA-fYe" style="IBUITableViewCellStyleSubtitle" id="xvY-sT-phG">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="56"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xvY-sT-phG" id="eGS-nR-EBA">
-                                            <rect key="frame" x="0.0" y="0.0" width="370" height="56"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="370" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dPF-lI-QdK">
-                                                    <rect key="frame" x="20" y="9" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="20" y="10" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -60,10 +53,27 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Lbw-4L-Fg0">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Lbw-4L-Fg0" firstAttribute="leading" secondItem="4GV-Hq-Urr" secondAttribute="leading" id="JLD-LR-Twr"/>
+                            <constraint firstAttribute="trailing" secondItem="Z9t-UJ-Uq9" secondAttribute="trailing" id="Jf7-ri-np1"/>
+                            <constraint firstItem="I0i-Zf-s0a" firstAttribute="top" secondItem="Lbw-4L-Fg0" secondAttribute="bottom" id="LuV-FW-gSe"/>
+                            <constraint firstItem="I0i-Zf-s0a" firstAttribute="trailing" secondItem="4GV-Hq-Urr" secondAttribute="trailing" id="UVR-mC-9bT"/>
+                            <constraint firstItem="Z9t-UJ-Uq9" firstAttribute="top" secondItem="s40-9R-mDg" secondAttribute="top" id="Wif-BF-CSN"/>
+                            <constraint firstItem="Lbw-4L-Fg0" firstAttribute="trailing" secondItem="4GV-Hq-Urr" secondAttribute="trailing" id="ZCT-bx-IXO"/>
+                            <constraint firstItem="Z9t-UJ-Uq9" firstAttribute="leading" secondItem="s40-9R-mDg" secondAttribute="leading" id="iaf-l4-CST"/>
+                            <constraint firstItem="Lbw-4L-Fg0" firstAttribute="top" secondItem="Z9t-UJ-Uq9" secondAttribute="bottom" id="j17-Rv-2Vj"/>
+                            <constraint firstItem="I0i-Zf-s0a" firstAttribute="bottom" secondItem="s40-9R-mDg" secondAttribute="bottom" id="lzP-gg-bvo"/>
+                            <constraint firstItem="I0i-Zf-s0a" firstAttribute="leading" secondItem="4GV-Hq-Urr" secondAttribute="leading" id="nIy-9s-QFW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4GV-Hq-Urr"/>
                     </view>
+                    <size key="freeformSize" width="414" height="896"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GEa-vk-Fpn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
