[update]コード整理

--- a/CheckExchangeRate/CheckExchangeRate/Modules/CurrencyList/View/CurrencyList.storyboard
+++ b/CheckExchangeRate/CheckExchangeRate/Modules/CurrencyList/View/CurrencyList.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="100" width="414" height="796"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurrencyCell" textLabel="dPF-lI-QdK" detailTextLabel="8Vl-IA-fYe" style="IBUITableViewCellStyleSubtitle" id="xvY-sT-phG" customClass="CurrencyCell" customModule="CheckRate" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurrencyCell" textLabel="dPF-lI-QdK" detailTextLabel="8Vl-IA-fYe" style="IBUITableViewCellStyleSubtitle" id="xvY-sT-phG">
                                         <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xvY-sT-phG" id="eGS-nR-EBA">
