--- a/CheckExchangeRate/CheckExchangeRate/Modules/Top/View/Top.storyboard
+++ b/CheckExchangeRate/CheckExchangeRate/Modules/Top/View/Top.storyboard
@@ -65,7 +65,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gaG-nr-WtQ">
-                                <rect key="frame" x="324" y="249.5" width="60" height="30"/>
+                                <rect key="frame" x="324" y="252.5" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="5J4-e0-AUy"/>
                                     <constraint firstAttribute="height" constant="30" id="vNz-Qm-w4H"/>
@@ -86,31 +86,43 @@
                                     <action selector="toCurrencyButtonTapped:" destination="3Ud-Ro-ssX" eventType="touchUpInside" id="55s-af-MsR"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xVe-Ph-jrf">
-                                <rect key="frame" x="157" y="174" width="40" height="60"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVe-Ph-jrf">
+                                <rect key="frame" x="187" y="174" width="40" height="60"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eid-bQ-Re5">
-                                        <rect key="frame" x="0.0" y="0.0" width="7" height="62"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eid-bQ-Re5">
+                                        <rect key="frame" x="0.0" y="0.0" width="7" height="60"/>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="7" id="XPp-tG-qcw"/>
+                                        </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mcw-9L-0yZ">
-                                        <rect key="frame" x="33" y="0.0" width="7" height="62"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mcw-9L-0yZ">
+                                        <rect key="frame" x="33" y="0.0" width="7" height="60"/>
                                         <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="7" id="PyZ-ie-CXe"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="mcw-9L-0yZ" secondAttribute="trailing" id="3lZ-qL-izU"/>
                                     <constraint firstAttribute="height" constant="60" id="BdU-mW-gyw"/>
+                                    <constraint firstAttribute="bottom" secondItem="mcw-9L-0yZ" secondAttribute="bottom" id="Nzh-4r-Qwr"/>
+                                    <constraint firstItem="Eid-bQ-Re5" firstAttribute="top" secondItem="xVe-Ph-jrf" secondAttribute="top" id="Oky-0w-v6Y"/>
+                                    <constraint firstAttribute="bottom" secondItem="Eid-bQ-Re5" secondAttribute="bottom" id="RvK-Qe-pfx"/>
+                                    <constraint firstAttribute="width" constant="40" id="THS-27-fkX"/>
+                                    <constraint firstItem="Eid-bQ-Re5" firstAttribute="leading" secondItem="xVe-Ph-jrf" secondAttribute="leading" id="e7i-9c-yE8"/>
+                                    <constraint firstItem="mcw-9L-0yZ" firstAttribute="top" secondItem="xVe-Ph-jrf" secondAttribute="top" id="jQT-oG-Uyo"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8u6-H7-x7x">
-                                <rect key="frame" x="30" y="254" width="284" height="21"/>
+                                <rect key="frame" x="30" y="254" width="284" height="27"/>
                                 <attributedString key="attributedText">
                                     <fragment content="1000,000">
                                         <attributes>
-                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <font key="NSFont" size="24" name="Arial-BoldMT"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -126,9 +138,9 @@
                             <constraint firstItem="xVe-Ph-jrf" firstAttribute="top" secondItem="Sx9-0O-UlF" secondAttribute="bottom" constant="20" id="9sf-zZ-Nz3"/>
                             <constraint firstItem="l1w-zv-KGe" firstAttribute="top" secondItem="UB8-yh-Bt1" secondAttribute="top" constant="20" id="Hza-kz-e8R"/>
                             <constraint firstItem="Sx9-0O-UlF" firstAttribute="centerY" secondItem="csJ-kg-0en" secondAttribute="centerY" id="KSM-yY-SAf"/>
-                            <constraint firstItem="xVe-Ph-jrf" firstAttribute="centerX" secondItem="Sx9-0O-UlF" secondAttribute="centerX" id="Klq-GK-c6d"/>
                             <constraint firstItem="l1w-zv-KGe" firstAttribute="centerX" secondItem="bVx-XY-KN2" secondAttribute="centerX" id="OXr-xR-7F9"/>
                             <constraint firstItem="VKO-xd-wuD" firstAttribute="centerX" secondItem="csJ-kg-0en" secondAttribute="centerX" id="SND-VS-dmp"/>
+                            <constraint firstItem="xVe-Ph-jrf" firstAttribute="centerX" secondItem="bVx-XY-KN2" secondAttribute="centerX" id="WPs-dM-iZf"/>
                             <constraint firstItem="8u6-H7-x7x" firstAttribute="centerY" secondItem="gaG-nr-WtQ" secondAttribute="centerY" id="XoK-bG-ffx"/>
                             <constraint firstItem="Sx9-0O-UlF" firstAttribute="leading" secondItem="UB8-yh-Bt1" secondAttribute="leading" constant="30" id="bH1-qL-CSL"/>
                             <constraint firstItem="gaG-nr-WtQ" firstAttribute="trailing" secondItem="csJ-kg-0en" secondAttribute="trailing" id="fu9-fT-TVg"/>
