--- a/CheckExchangeRate/CheckExchangeRate/Modules/Top/View/Top.storyboard
+++ b/CheckExchangeRate/CheckExchangeRate/Modules/Top/View/Top.storyboard
@@ -55,11 +55,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VKO-xd-wuD">
-                                <rect key="frame" x="309" y="189" width="90" height="30"/>
+                                <rect key="frame" x="319" y="189" width="70" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="kgP-ki-Z3u"/>
                                 </constraints>
-                                <state key="normal" title="↑↓Exchenge"/>
+                                <state key="normal" title="↑↓Switch"/>
                                 <connections>
                                     <action selector="exchangeButtonTapped:" destination="3Ud-Ro-ssX" eventType="touchUpInside" id="VHD-2o-stG"/>
                                 </connections>
